wk_taa_taaqa/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AMS_Account_Number__c</fullName>
        <label>AMS Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Work_Type__c</fullName>
        <label>Audit Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audits</fullName>
                </value>
                <value>
                    <fullName>Audits compilations and reviews</fullName>
                </value>
                <value>
                    <fullName>Audits including Government Audits</fullName>
                </value>
                <value>
                    <fullName>Audits but not for Government</fullName>
                </value>
                <value>
                    <fullName>Audits Compilations and Reviews including Government Audits</fullName>
                </value>
                <value>
                    <fullName>Audits Compilations and Reviews but not for Government</fullName>
                </value>
                <value>
                    <fullName>Compilations and Reviews Only</fullName>
                </value>
                <value>
                    <fullName>No Assurance Work</fullName>
                </value>
                <value>
                    <fullName>Tax Only</fullName>
                </value>
                <value>
                    <fullName>Full Service Firm</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Comment__c</fullName>
        <label>HubSpot-Temp-Campaign-Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>FirstName+&quot; &quot;+LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNC_Last_Modified_Filename__c</fullName>
        <label>DNC Last Modified Filename</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Responsibility__c</fullName>
        <label>Decision Responsibility</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Call_Date__c</fullName>
        <label>Do Not Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_Type__c</fullName>
        <label>Domain Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Foreign – Canada</fullName>
                </value>
                <value>
                    <fullName>Foreign – Non-Canadian</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Named – Corp</fullName>
                </value>
                <value>
                    <fullName>Named - National</fullName>
                </value>
                <value>
                    <fullName>Named - Strategic</fullName>
                </value>
                <value>
                    <fullName>Web Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>ERP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics AX</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics GP</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics NAV</fullName>
                </value>
                <value>
                    <fullName>NetSuite</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Other (please indicate in comments section below)</fullName>
                </value>
                <value>
                    <fullName>Unknown/Don&apos;t Know</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamics 365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FED_STATE_DNC_DATE__c</fullName>
        <label>FED STATE DNC DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FED_STATE_DNC_MOBILE_DATE__c</fullName>
        <label>FED STATE DNC MOBILE DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FED_STATE_DNC_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FED STATE DNC MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FED_STATE_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FED STATE DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting &amp; Audit</fullName>
                </value>
                <value>
                    <fullName>Financial Reporting</fullName>
                </value>
                <value>
                    <fullName>Firm Management</fullName>
                </value>
                <value>
                    <fullName>International Tax</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Management Advisory</fullName>
                </value>
                <value>
                    <fullName>Provision</fullName>
                </value>
                <value>
                    <fullName>Sales Tax</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HubSpot_BounceBack__c</fullName>
        <inlineHelpText># of HubSpot Hard Bounce Back emails sent</inlineHelpText>
        <label>HubSpot BounceBack</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INTERNAL_DNC_DATE__c</fullName>
        <label>INTERNAL DNC DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INTERNAL_DNC_MOBILE_DATE__c</fullName>
        <label>INTERNAL DNC MOBILE DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INTERNAL_DNC_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INTERNAL DNC MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INTERNAL_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INTERNAL DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISR_Q4_15_Tax_Eng_Attack_Promo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISR Q4 15 Tax-Eng Attack Promo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox if this contact is no longer active at their company.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indirect_Owner_Email__c</fullName>
        <description>Populate with the email address of the user selected in the Indirect Owner field</description>
        <formula>IF( Account.Indirect_Owner__r.FirstName = &quot;Territory&quot;, 
    Account.Indirect_Owner__r.Custodial_Rep__r.Email,
    Account.Indirect_Owner__r.Email
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Owner__c</fullName>
        <formula>IF( Account.Indirect_Owner__r.FirstName = &quot;Territory&quot;, 
    Account.Indirect_Owner__r.Custodial_Rep__r.FirstName + &quot; &quot; + Account.Indirect_Owner__r.Custodial_Rep__r.LastName,
    Account.Indirect_Owner__r.FirstName &amp; &quot; &quot; &amp; Account.Indirect_Owner__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_owner_ID__c</fullName>
        <formula>IF( Account.Indirect_Owner__r.FirstName = &quot;Territory&quot;, 
    CASESAFEID(Account.Indirect_Owner__r.Custodial_Rep__r.Id),
    CASESAFEID(Account.Indirect_Owner__r.Id)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MOBILE_PHONE_DATE_ADDED__c</fullName>
        <label>MOBILE PHONE DATE ADDED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Sub_Segment__c</fullName>
        <label>SubSegment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>2-4 Total Employees</fullName>
                </value>
                <value>
                    <fullName>5-9 Total Employees</fullName>
                </value>
                <value>
                    <fullName>10-19 Total Employees</fullName>
                </value>
                <value>
                    <fullName>20-49 Total Employees</fullName>
                </value>
                <value>
                    <fullName>50-99 Total Employees</fullName>
                </value>
                <value>
                    <fullName>100+ Total Employees</fullName>
                </value>
                <value>
                    <fullName>Top 100 Firms</fullName>
                </value>
                <value>
                    <fullName>Global Enterprise</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Dept of Agriculture</fullName>
                </value>
                <value>
                    <fullName>Dept of Commerce</fullName>
                </value>
                <value>
                    <fullName>Dept of Defense</fullName>
                </value>
                <value>
                    <fullName>Dept of Energy</fullName>
                </value>
                <value>
                    <fullName>Dept of Health and Human Services</fullName>
                </value>
                <value>
                    <fullName>Dept of Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Dept of Housing and Urban Development</fullName>
                </value>
                <value>
                    <fullName>Dept of Interior</fullName>
                </value>
                <value>
                    <fullName>Dept of Justice</fullName>
                </value>
                <value>
                    <fullName>Dept of Labor</fullName>
                </value>
                <value>
                    <fullName>Dept of State</fullName>
                </value>
                <value>
                    <fullName>Dept of Treasury (not IRS)</fullName>
                </value>
                <value>
                    <fullName>Dept of Vet Affairs</fullName>
                </value>
                <value>
                    <fullName>EEOC</fullName>
                </value>
                <value>
                    <fullName>Exec Branch (White House)</fullName>
                </value>
                <value>
                    <fullName>FCC</fullName>
                </value>
                <value>
                    <fullName>FDIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_DNC_Reason__c</fullName>
        <label>Mobile DNC Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Date__c</fullName>
        <label>Mobile Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Campaign_Date__c</fullName>
        <description>Automatically gets populated/updated each time a new Campaign Member is added to the Contact</description>
        <label>Most Recent Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NA_CCC__c</fullName>
        <defaultValue>true</defaultValue>
        <description>CCH Connections Conference</description>
        <inlineHelpText>CCH Connections Conference</inlineHelpText>
        <label>NACCC-CCH Conn Conf Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_IFT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Intelligence for Taxation (Monthly)</description>
        <inlineHelpText>Intelligence for Taxation (Monthly)</inlineHelpText>
        <label>NAIFT-Intell for Tax Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_TNH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tax News Headlines (Daily)</description>
        <inlineHelpText>Tax News Headlines (Daily)</inlineHelpText>
        <label>NATNH-Tax News Headline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Number__c</fullName>
        <label>Partner Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_DNC_Reason__c</fullName>
        <label>Phone DNC Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Text__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <label>Phone Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Intere__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>CCH AutoFlow</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Document</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Portal</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Practice</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Tax</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Workstream</fullName>
                </value>
                <value>
                    <fullName>CCH eSign/Bundles</fullName>
                </value>
                <value>
                    <fullName>CCH Knowledge Tools</fullName>
                </value>
                <value>
                    <fullName>CCH Sales Tax Office v4.0 Upgrade</fullName>
                </value>
                <value>
                    <fullName>CCH Site Builder</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pfx ActiveData</fullName>
                </value>
                <value>
                    <fullName>Pfx Document</fullName>
                </value>
                <value>
                    <fullName>Pfx Engagement/Workpaper Manager</fullName>
                </value>
                <value>
                    <fullName>Pfx Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>Pfx Knowledge Coach</fullName>
                </value>
                <value>
                    <fullName>Pfx Outsource</fullName>
                </value>
                <value>
                    <fullName>Pfx PDFlyer</fullName>
                </value>
                <value>
                    <fullName>Pfx Practice Management</fullName>
                </value>
                <value>
                    <fullName>Pfx Scan</fullName>
                </value>
                <value>
                    <fullName>Pfx Tax</fullName>
                </value>
                <value>
                    <fullName>Professional and Client Services</fullName>
                </value>
                <value>
                    <fullName>Rates &amp; Taxability Databases</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Learning</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Use Tax Calculation (On-Premise)</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Use Tax Calculation (SaaS)</fullName>
                </value>
                <value>
                    <fullName>Sales Tax Compliance (Returns)</fullName>
                </value>
                <value>
                    <fullName>Training &amp; Consulting/Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RL_AAR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Accounting  Audit Research</description>
        <inlineHelpText>RL Accounting  Audit Research</inlineHelpText>
        <label>RLAAR-Accounting  Audit Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_FEPR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Financial Estate Planning Research</description>
        <inlineHelpText>Financial Estate Planning Research</inlineHelpText>
        <label>RLFEP-Financial Estate Planning Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_FTR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Federal Tax Research</description>
        <inlineHelpText>RL Federal Tax Research</inlineHelpText>
        <label>RLFT- Federal Tax Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_ITR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL International Tax Research</description>
        <inlineHelpText>RL International Tax Research</inlineHelpText>
        <label>RLIT- International Tax Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SAA__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Sem - Accounting &amp; Audit</description>
        <inlineHelpText>RL Sem - Accounting &amp; Audit</inlineHelpText>
        <label>RLSEMAA-Acct Audit Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SFE__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Sem - Finance &amp; Estate Planning</description>
        <inlineHelpText>RL Sem - Finance &amp; Estate Planning</inlineHelpText>
        <label>RLSEMFEP-Fin Est Plan Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SFI__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Sem - Federal Tax Individual</description>
        <inlineHelpText>RL Sem - Federal Tax Individual</inlineHelpText>
        <label>RLSEMFT-Federal Tax Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SIT__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Sem - International Tax</description>
        <inlineHelpText>RL Sem - International Tax</inlineHelpText>
        <label>RLSEMIT-Intl Tax CPE Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_SST__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL Sem - State Tax</description>
        <inlineHelpText>RL Sem - State Tax</inlineHelpText>
        <label>RLSEMST-State Tax Seminars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RL_STR__c</fullName>
        <defaultValue>true</defaultValue>
        <description>RL State Tax Research</description>
        <inlineHelpText>RL State Tax Research</inlineHelpText>
        <label>RLST-State Tax Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_L_Owner_Email__c</fullName>
        <description>Populate with the email address of the user selected in the R&amp;L Owner field</description>
        <formula>IF( Account.R_L_Owner__r.FirstName = &quot;Territory&quot;, 
    Account.R_L_Owner__r.Custodial_Rep__r.Email,
    Account.R_L_Owner__r.Email
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;L Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_L_Owner_ID__c</fullName>
        <formula>IF( Account.R_L_Owner__r.FirstName = &quot;Territory&quot;, 
    CASESAFEID(Account.R_L_Owner__r.Custodial_Rep__r.Id),
    CASESAFEID(Account.R_L_Owner__r.Id)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;L Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_L_Owner__c</fullName>
        <formula>IF( Account.R_L_Owner__r.FirstName = &quot;Territory&quot;, 
    Account.R_L_Owner__r.Custodial_Rep__r.FirstName + &quot; &quot; + Account.R_L_Owner__r.Custodial_Rep__r.LastName,
    Account.R_L_Owner__r.FirstName &amp; &quot; &quot; &amp; Account.R_L_Owner__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R&amp;L Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S2S_Contact_Data__c</fullName>
        <formula>((FirstName= &apos;&apos; || FirstName = null) || (LastName= &apos;&apos; || LastName = null) || (Email= &apos;&apos; || Email = null) || (SFDC_Contact__c= &apos;&apos; || SFDC_Contact__c = null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S2S Contact Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Contact_Text__c</fullName>
        <externalId>true</externalId>
        <label>SFDC Contact # (Text)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Contact__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>SFDC Contact #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFS_CID2__c</fullName>
        <label>SFS CID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Contact_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFS Contact Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Informatica_Field_Update_Time__c</fullName>
        <label>SFS Informatica Field Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFS_TwoTrial_Reg_Code__c</fullName>
        <label>SFS TwoTrial Reg Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP_AAW__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SW Account &amp; Audit Workflow</description>
        <inlineHelpText>SW Account &amp; Audit Workflow</inlineHelpText>
        <label>SWAAW-Acct Audit Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CDT__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SW Corporate Direct Tax</description>
        <inlineHelpText>SW Corporate Direct Tax</inlineHelpText>
        <label>SWCDT-Corp Direct Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CFM__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SW CPA Firm Management</description>
        <inlineHelpText>SW CPA Firm Management</inlineHelpText>
        <label>SW CPA-CPA Firm Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CFT__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SW CPA Firm Technology</description>
        <inlineHelpText>SW CPA Firm Technology</inlineHelpText>
        <label>SWCFT-CPA Firm Technology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_CIT__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SW Corporate Indirect Tax</description>
        <inlineHelpText>SW Corporate Indirect Tax</inlineHelpText>
        <label>SWCIT-Corp Indirect Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Alignment_Staging__c</fullName>
        <description>A staging field on the Contact object, which will be populated via Pardot, and then a workflow to take the value from that field and populate on the Campaign Member. The staging field should then be blanked out after Campaign Field is populated.</description>
        <label>Sales Alignment (Staging)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>R&amp;L</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Firms</fullName>
                </value>
                <value>
                    <fullName>Banks and Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Consultants</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Financial and Estate Planners</fullName>
                </value>
                <value>
                    <fullName>General Corporate</fullName>
                </value>
                <value>
                    <fullName>Hospital and Payers</fullName>
                </value>
                <value>
                    <fullName>Insurance Companies</fullName>
                </value>
                <value>
                    <fullName>Legal Professionals</fullName>
                </value>
                <value>
                    <fullName>Retail Tax Preparers</fullName>
                </value>
                <value>
                    <fullName>Schools and Libraries</fullName>
                </value>
                <value>
                    <fullName>State and Local Government</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt and Membership Organizations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_Owner_Email__c</fullName>
        <description>Populate with the email address of the user selected in the Software Owner field</description>
        <formula>IF( Account.Software_Owner__r.FirstName = &quot;Territory&quot;, 
    Account.Software_Owner__r.Custodial_Rep__r.Email,
    Account.Software_Owner__r.Email
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Software_Owner_ID__c</fullName>
        <formula>IF( Account.Software_Owner__r.FirstName = &quot;Territory&quot;, 
    CASESAFEID(Account.Software_Owner__r.Custodial_Rep__r.Id),
    CASESAFEID(Account.Software_Owner__r.Id)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Software Owner ID</label>
        <type>Text</type>
    </fields>
</CustomObject>